# MRT-Assignments

./: README.md
Assignment-1/: code.py
Assignment-2/rover_navigation/: package.xml  setup.py
Assignment-2/rover_navigation/launch/: rover_navigation.launch.py
Assignment-2/rover_navigation/rover_navigation/: obstacle_avoidance.py  rover_navigation.py
Assignment-2/rover_odometry/: CMakeLists.txt  package.xml  setup.py
Assignment-2/rover_odometry/launch/: rover_odometry.launch.py
Assignment-2/rover_odometry/rover_odometry/: r_data.py  r_position.py
Assignment-2/rover_status/: package.xml  setup.py
Assignment-2/rover_status/launch/: rover_status.launch.py
Assignment-2/rover_status/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Assignment-2/rover_status/rover_status/: bat_temp_level.py  health_status.py  rover_health.py
Assignment-2/soil_collection/: package.xml  setup.cfg  setup.py
Assignment-2/soil_collection/launch/: soil_collection.launch.py
Assignment-2/soil_collection/soil_collection/: collection_client.py  rover_collection.py
Assignment-3/: README.md
Assignment-3/rover_simulation/: CMakeLists.txt  package.xml
Assignment-3/rover_simulation/config/: gazebo_params.yaml
Assignment-3/rover_simulation/launch/: spawn_rover.launch.py
Assignment-3/rover_simulation/models/rover/: model.sdf
assignment1/: assignment1.py
