<?xml version="1.0"?>
<package format="3">
  <name>rover_simulation</name>
  <version>0.1.0</version>
  <description>ROS 2 package to spawn a rover SDF model in Gazebo</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

